--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/*------------TOP EMPLOYERS SYTLES------------*/
 body {
   font: 10px sans-serif;
 }
@@ -22,3 +23,29 @@ div.tooltip {
     border-radius: 8px;
     pointer-events: none;
 }
+
+/*-------MAP STYLES---------*/
+.land{
+    fill: #fff;
+    stroke: #111;
+}
+.counties {
+  fill: none;
+  stroke: none;
+}
+
+.states {
+  fill: none;
+  stroke: #111;
+  stroke-linejoin: round;
+}
+
+.q0-9 { fill:rgb(247,251,255); }
+.q1-9 { fill:rgb(222,235,247); }
+.q2-9 { fill:rgb(198,219,239); }
+.q3-9 { fill:rgb(158,202,225); }
+.q4-9 { fill:rgb(107,174,214); }
+.q5-9 { fill:rgb(66,146,198); }
+.q6-9 { fill:rgb(33,113,181); }
+.q7-9 { fill:rgb(8,81,156); }
+.q8-9 { fill:rgb(8,48,107); }
