--- a/styles.css
+++ b/styles.css
@@ -32,10 +32,16 @@ div.tooltip {
     font-size: 30px;
 }
 
+.chartTitleAccent {
+    fill: #FF5722;
+    font-family: 'Roboto', sans-serif;
+    font-size: 30px;
+}
+
 .chartSubTitle {
     fill: white;
     font-family: 'Roboto', sans-serif;
-    font-size: 12;
+    font-size: 12px;
     fill-opacity: 0.70;
 }
 
