--- a/styles.css
+++ b/styles.css
@@ -107,3 +107,36 @@ div.tooltip {
   stroke: steelblue;
   stroke-width: 1.5px;
 }
+
+/*------------- Custom HTML CSS --------------*/
+.page {
+    width: 100%;
+    /* prevents content from squishing on small screens */
+    min-height: 500px;
+    background-color: white
+}
+.nav {
+    background: #f58625;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    text-align: center;
+    font-size: 0
+}
+.nav a {
+    color: white;
+    display: inline-block;
+    font-size: 15px;
+    text-transform: uppercase;
+    font-weight: 400;
+    padding: 10px 10px;
+    margin: 20px 10px;
+    border-radius: 4px;
+    letter-spacing: 0.07em;
+    -webkit-transition: background-color 200ms ease;
+    -moz-transition: background-color 200ms ease;
+    -o-transition: background-color 200ms ease;
+    transition: background-color 200ms ease
+}
+}
