top employer bars size calculated with window size and other heirarchy changes

--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,13 @@ div.tooltip {
     fill: #BF360C;
 }
 
+.chartBarHolder{
+    display: inline-block
+}
+svg {
+    display: inline-block;
+    padding: 0;
+}
 /*-------MAP STYLES---------*/
 .land{
     fill: #fff;
