--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 /*------------TOP EMPLOYERS SYTLES------------*/
 body {
   font: 10px sans-serif;
-  color: white
+  color: white;
+  
 }
 
 .arc {
@@ -254,6 +255,56 @@ i {
     background-image: url(./images/background.jpg);
     background-color: #364555;
 }
+table{
+    border-collapse: separate;    
+}
+.employedTable {
+    width: 70%;
+    border: 2px #ffe1c9 solid;
+    box-sizing: border-box;
+    border-radius: 8px;
+    margin: 0 auto;
+    border-spacing: 0;
+    font-size: 14px;
+}
+.employedTable {
+    line-height: 1.5
+}
+.employedTable tbody tr:nth-child(even) {
+    background-color: #ffe1c9
+}
+.employedTable tbody tr td:first-child {
+    color: #f58625;
+    font-weight: 400;
+    min-width: 150px
+}
+.employedTable tbody tr td:nth-child(2) {
+    color: #444;
+    min-width: 150px
+}
+.employedTable tbody tr:nth-child(odd) {
+    background-color: #fff3ea
+}
+.employedTable tr {
+    margin: 0;
+    padding: 0;
+    border: 0
+}
+.employedTable tr td {
+    padding: 14px;
+    margin: 0;
+    border: 0
+}
+.employedTable th {
+    color: #f58625;
+    text-align: left;
+    padding: 12px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-size: 28px;
+    background: #f9f6f3
+}
+
 @media (max-width: 1000px) {
     #hamburger-menu {
         display: inline-block
