--- a/styles.css
+++ b/styles.css
@@ -304,8 +304,15 @@ table{
     font-size: 28px;
     background: #f9f6f3
 }
-
+#topEmployers{
+    width: 70%;
+    margin: 0 auto;
+}
 @media (max-width: 1000px) {
+    #topEmployers{
+        width: 100%;
+        margin: 0 auto;
+    }
     .chartSubLabel {
         font-size: 10px;
     }
