--- a/styles.css
+++ b/styles.css
@@ -187,7 +187,10 @@ svg {
 h1 {
     font-size: 72px;
     text-transform: uppercase;
-    text-align: center
+    text-align: center;
+    text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.5),
+                 0px 8px 13px rgba(0, 0, 0, 0.2),
+                 0px 18px 23px rgba(0, 0, 0, 0.2);
 }
 h2 {
     font-size: 36px;
@@ -261,12 +264,12 @@ table{
     box-sizing: border-box;
     border-radius: 8px;
     margin: 0 auto;
+    margin-top: 25px;
     border-spacing: 0;
-    font-size: 14px;
-}
-.employedTable {
+    font-size: 16px;
     line-height: 1.5
 }
+
 .employedTable tbody tr:nth-child(even) {
     background-color: #ffe1c9
 }
@@ -298,7 +301,7 @@ table{
     padding: 12px;
     font-family: "Roboto", sans-serif;
     font-weight: 300;
-    font-size: 28px;
+    font-size: 32px;
     background: #f9f6f3
 }
 #topEmployers{
@@ -347,6 +350,9 @@ table{
     .mob-nav-header {
         display: inline-block
     }
+    .employedTable{
+        width: 100%
+    }
 }
 @media (max-height: 700px) {
     #logo {
@@ -359,17 +365,21 @@ table{
 	text-align: center;
 	background-color: #95c6de;
 	border-radius: 50%;
-	width: 24px;
-	height: 24px;
-	font-size: 14px;
-	line-height: 26px;
+	width: 35px;
+	height: 35px;
+	font-size: 25px;
+	line-height: 35px;
 	cursor: default;
+    margin-top: 15px;
+    margin-left: 15px;
 }
 
 .help-tip:before{
 	content:'?';
 	font-weight: bold;
 	color:#fff;
+    margin-top: 10px;
+    
 }
 
 .help-tip:hover p{
