--- a/styles.css
+++ b/styles.css
@@ -265,6 +265,7 @@ table{
     border-radius: 8px;
     margin: 0 auto;
     margin-top: 25px;
+    margin-bottom: 25px;
     border-spacing: 0;
     font-size: 16px;
     line-height: 1.5
